--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="back_thing">测试上次嘿嘿实施崔还是是荒地上帝三生三世是是是是是是是是是是是是是是是是都会死地上IDhisisish的测试上次嘿嘿实施崔还是是荒地上帝三生三世是是是是是是是是是是是是是是是是都会死地上IDhisisish的测试上次嘿嘿实施崔还是是荒地上帝三生三世是是是是是是是是是是是是是是是是都会死地上IDhisisish的</string>
 </resources>
