bug修复，存档功能优化，添加部分英雄装备推荐，世界版本0.42k

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,5 @@
     <string name="app_name">世界RPG</string>
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="world_version">0.42b</string>
+    <string name="world_version">0.42k</string>
 </resources>
